Fix spacing inefficiency, finalize.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -6,7 +6,6 @@ html{
 }
 .content{
     display: flex;
-    align-items: center;
     padding: 1.875rem;
 }
 h1{
@@ -18,6 +17,7 @@ h3{
     font-size: 1.5rem;
     font-family: "Cabin", sans-serif;
     font-weight: bold;
+    padding-bottom: 1rem;
 }
 .heading{
     text-align: center;
@@ -165,6 +165,10 @@ header .mobile{
 }
 /*End of Jumbotron */
 /* Practice & Thesis Structure */
+.contain-left{
+    display: flex;
+    flex-direction: column;
+}
 .contain-left h1,
 p{
     margin-top: 1rem;
@@ -181,7 +185,6 @@ p{
 .contain-right{
     display: flex;
     flex-direction: column;
-    align-items: center;
 }
 .info{
     display: flex;
@@ -192,8 +195,7 @@ p{
     height: 35%;
 }
 .text{
-    display: flex;
-    flex-direction: column;
+    display: block;
     padding: 0.5rem 0 0.5rem 1rem;
     margin-bottom: 0.5rem;
 }
@@ -251,30 +253,31 @@ p{
 .desktop-courses{
     background-color: #DADBE5;
     padding-bottom: 1rem;
+    text-align: center;
 }
 .course-content{
     display: flex;
+    flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
 }
 .course{
-    padding: 1rem;
-    max-width: 25%;
+    margin: 1rem;
+    max-width: 28%;
+    flex-direction: column;
 }
 .course img{
     width: 100%;
     height: auto;
 }
 .description{
-    display: flex;
-    line-height: 1.4;
-    flex-direction: column;
-    padding: 1rem 1rem 1.5rem 1rem;
+    line-height: 2;
     background-color: white;
 }
+
 .description span{
     color: #3D3D40;
-    padding-top: 0.5rem;
+    display: block;
 }
 .mobile-courses{
     display: none;
@@ -304,11 +307,13 @@ p{
 }
 #thesis .info{
     height: 168px;
+    width: 423px;
 }
 #thesis .info img{
-    width: 55%;
-    height: auto;
+    width: auto;
+    height: 136px;
 }
+
 @media only screen and (max-width: 760px) {
     #thesis .contain-right,
     #thesis h1,
